@@ -22,6 +22,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #12283: Fixed regression in smtplib quoting of leading dots in DATA.
+
 - Issue #12168: SysLogHandler now allows NUL termination to be controlled using
   a new 'append_nul' attribute on the handler.
 
